fix bag with path to js in html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/footer.css" />
     <link rel="stylesheet" href="css/modal.css" />
-    <script type="module" src="/index.js" defer></script>
+    <script type="module" src="index.js" defer></script>
   </head>
   <body>
     <div class="container">
